<resources>
    <string name="app_name">Pokedex</string>
    <string name="please_wait">Loading...</string>
    <string name="no_internet">No internet</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="really">Would you really like to exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="application_made_by_algebra_students">Application made by Algebra student</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure to delete</string>
    <string name="type">Types</string>
    <string name="pokemon_name">Name</string>
    <string name="abilities">Abilities</string>
    <string name="map">Map</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="map_location">Pokemon Center</string>
</resources>