<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/paddingItems"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivPokemon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivHeight"
            tools:src="@drawable/poke_unobtainable"/>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/weight"/>

            <TextView
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/pokemon_name"/>

            <TextView
                android:id="@+id/lbHeight"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                tools:text="@string/height"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/weight"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:gravity="center"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_name"/>

            <TextView
                android:id="@+id/tvHeight"
                android:gravity="left"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="@string/height" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/marginTopDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/type"/>

            <ImageView
                android:id="@+id/ivCaught"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:src="@drawable/caught_red"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/abilities"/>

        <TextView
            android:id="@+id/tvAbilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem/random" />


    </LinearLayout>

</ScrollView>